2011-08-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/incidents/incident_detail.php: Fixed table width in this 
	view. 

2011-08-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.preview.php: fixed the include of
	php file.
	
	Fixes: #3396828

2011-08-23  Sancho Lerena <slerena@artica.es>

	* pandora_migrate_v3.2_to_v4.0.sql: Missing some alter sentences
	for trecon_task table. Added.

2011-08-22  Tomas Palacios  <tomas.palacios@artica.es>

	* pandora_console/pandoradb_data.sql
	pandora_console/pandoradb.data.oracle.sql
	pandora_console/pandoradb.postgreSQL.sql:updated the
	default site news.

	Fixes: Bug ID 3396846

2011-08-23  Sergio Martin <sergio.martin@artica.es>

	* operation/reporting/reporting_viewer.php: Fixed require embed 
	require_once problem in the reports view

2011-08-23 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Fixed an style bug in collections
	table

2011-08-23  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: fixed typo mistake.

2011-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Fixed a unecessary toLower
	call function

2011-08-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/images/plotchart.png: Added network console
	icon in default skin.

2011-08-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: added parameter to cut the names
	by default is true.

2011-08-23  KIKUCHI Koichiro  <koichiro@rworks.jp>

	* operation/agentes/exportdata.php: Fixed format character for default
	  start_time and end_time.

2011-08-23  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_modules.php: Added comment for the 5th argument
	of modules_get_agents_with_module_name().

2011-08-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: fixed the create relative image for