@@ -1,3 +1,10 @@
+2011-08-24  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_modules.php: added the call to enterprise function for
+	to copy the remote configuration when copy the modules.
+	
+	Fixes: #3397314
+
 2011-08-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* operation/incidents/incident_detail.php: Fixed table width in this 
